hphp/test/quick/parse_fail_shapes2.php.expectf

Fatal error: Shape field name must not be an int-like string (i.e. "123") in %s on line 5
